<resources>
    <string name="app_name">ApiGitHub</string>
    <string name="token">Personal access token</string>
    <string name="sign_in">Sign in</string>
    <string name="name_rep">Name repositories</string>
    <string name="description">Description</string>
    <string name="readme">ReadMe</string>
    <string name="language">Language</string>
    <string name="link">https://github.com/icerockdev/moko-resourcesddssfsfsfs</string>
    <string name="license">License</string>
    <string name="yourLicense">Your License</string>
    <string name="randomNumber">11</string>
    <string name="star">stars</string>
    <string name="fork">forks</string>
    <string name="watchers">watchers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Error</string>
</resources>