<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.DetailInfoFragment"
    android:id="@+id/scroll"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/details"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerDetails"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="16dp"
            android:autoLink="web"
            android:ellipsize="end"
            android:gravity="start"
            android:hint="@string/link"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:textColorLink="@color/blueMy"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableStartCompat="@drawable/ic_link" />

        <ImageView
            android:id="@+id/logoLicense"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_scales"
            android:contentDescription="@string/license"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/link" />

        <TextView
            android:id="@+id/license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_margin="16dp"
            android:hint="@string/license"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@id/logoLicense"
            app:layout_constraintTop_toBottomOf="@+id/link" />

        <TextView
            android:id="@+id/yourLicense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="end"
            android:hint="@string/yourLicense"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutStarForkWatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/logoLicense"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                >
                <ImageView
                    android:id="@+id/logoStar"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_star"
                    android:contentDescription="@string/star"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/yourStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:hint="@string/randomNumber"
                    android:textColor="@color/yellowMy"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/logoStar"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:hint="@string/star"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/yourStar"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutFork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/layoutStar"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/layoutStar">

                <ImageView
                    android:id="@+id/logoFork"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/ic_git_fork"
                    android:contentDescription="@string/fork"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/yourFork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:hint="@string/randomNumber"
                    android:textColor="@color/greenMy"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/logoFork"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/fork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:hint="@string/fork"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/yourFork"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutWatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/layoutFork"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/layoutFork"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/logoWatchers"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/watchers"
                    android:src="@drawable/ic_eye"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/yourWatchers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:hint="@string/randomNumber"
                    android:textColor="@color/azureMy"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/logoWatchers"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/watchers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:hint="@string/watchers"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/yourWatchers"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <WebView
            android:id="@+id/readMeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:layout_margin="16dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/layoutStarForkWatch"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Material.Light.ProgressBar.Large.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        android:indeterminateDrawable="@drawable/progress_bar_style"
        app:layout_constraintBottom_toBottomOf="@id/details"
        app:layout_constraintLeft_toLeftOf="@id/details"
        app:layout_constraintRight_toRightOf="@id/details"
        app:layout_constraintTop_toTopOf="@id/details" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>